# GOLDE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: Format.yml  Tests.yml  build.yml  windows-ci.yml
Dependencies/: CMakeLists.txt
Dependencies/GoogleTest/: CMakeLists.txt
Dependencies/ImGUI/: CMakeLists.txt
GOLAlgoLib/: CMakeLists.txt
GOLAlgoLib/include/: BigInt.hpp  BigUInt.hpp  GameGrid.h  GameGrid.hpp  Graphics2D.hpp  HashLife.hpp  HashQuadtree.h  HashQuadtree.hpp  LifeAlgorithm.h  LifeAlgorithm.hpp  LifeDataStructure.hpp  LifeHashSet.h  LifeHashSet.hpp  LifeNode.hpp  LifeRule.hpp  Plane.hpp  Topology.hpp  Torus.hpp
GOLAlgoLib/src/: BigUInt.cpp  GameGrid.cpp  HashLife.cpp  HashQuadtree.cpp  HashQuadtreeIterator.cpp  LifeAlgorithm.cpp  LifeHashSet.cpp  LifeNode.cpp  Plane.cpp  SparseLife.cpp  Topology.cpp  Torus.cpp
GOLCoreLib/include/: EditorModel.hpp  Game.h  Game.hpp  PresetSelection.h  PresetSelection.hpp  SimulationControl.h  SimulationControl.hpp  SimulationEditor.h  SimulationEditor.hpp  SimulationWorker.hpp
GOLCoreLib/src/: EditorModel.cpp  Game.cpp  PresetSelection.cpp  SimulationControl.cpp  SimulationEditor.cpp  SimulationWorker.cpp
GOLExecutable/: Application.cpp  CMakeLists.txt
GOLExecutable/presets/: logo.rle
GOLExecutable/presets/breeders/: glider_synthesizer.rle  simkin_glider_gun.rle  stabilized_switch_engine.rle
GOLExecutable/presets/spaceships/: cordership.rle  spaceship1.rle  spaceship2.rle  spaceship3.rle
GOLExecutable/src/: Application.cpp
GOLGraphicsLib/include/: Camera.hpp  GLBuffer.hpp  GLException.hpp  Graphics2D.hpp  GraphicsHandler.hpp  (+1 more)
GOLGuiLib/: CMakeLists.txt
GOLTest/: CMakeLists.txt
cmake/: CompilerOptions.cmake
(+81 files in other folders)
